added validation and pagination with complete concept with the POSTMAN